# komari-agent-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  build.rs  install.ps1  install.sh  rust-toolchain.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: COMPARISON.md  TESTING.md
docs/analysis/: chatgpt-architecture-advice.md  module-inventory.md  p8-project-overview.md  p8-risk-assessment.md
docs/design/: gzip-compression-strategy.md
docs/plan/: acceptance-criteria.md  architecture-reference.md  dependency-graph.md  milestones.md  p8-task-breakdown.md  phased-implementation-plan.md  spec.md  task-breakdown.md
docs/progress/: MASTER.md
src/: arena.rs  config.rs  crypto.rs  dns.rs  gzip.rs  http.rs  inflate.rs  json.rs  main.rs  proxy.rs  tls.rs  update.rs  ws.rs
src/monitor/: mod.rs  netstatic.rs  os.rs  virtualization.rs
src/monitor/connections/: freebsd.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/monitor/cpu/: freebsd.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/monitor/disk/: freebsd.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/monitor/gpu/: freebsd.rs  linux.rs  mod.rs  (+2 more)
src/protocol/: fsm.rs  mod.rs  v1.rs  v2.rs
src/server/: backoff.rs  cf_access.rs  mod.rs  ping_http.rs  ping_icmp.rs  ping_tcp.rs  reconnection.rs  task.rs
src/terminal/: mod.rs  unix.rs  windows.rs
(+30 files in other folders)
